--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
   <!-- external css -->
-  <link rel="stylesheet" href="style.css?v=2">
+  <link rel="stylesheet" href="style.css?v=3">
   <!-- external js -->
   <script src="common.js?v=2"></script>
 </head>
@@ -29,8 +29,8 @@
     <!-- title bar -->
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <p id="title_text">申請入學採計科目篩選器</p>
-        <p>來看看你想讀的科系採計哪些科目吧！</p>
+        <h1>申請入學採計科目篩選器</h1>
+        <h2>來看看你想讀的科系採計哪些科目吧！</h2>
       </div>
     </div>
     <!-- search form -->
