--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
   <!-- external css -->
-  <link rel="stylesheet" href="style.css?v=3">
+  <link rel="stylesheet" href="style.css?v=4">
   <!-- external js -->
   <script src="common.js?v=2"></script>
 </head>
@@ -30,7 +30,7 @@
     <!-- title bar -->
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <h1>申請入學採計科目篩選器</h1>
+        <h1>學測個人申請─採計科目查詢</h1>
         <h2>來看看你想讀的科系採計哪些科目吧！</h2>
       </div>
     </div>
