--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="面對學測五選四的來臨，還在苦惱要將心力投注在哪個科系上嗎？使用這個簡單的小工具，能讓你清楚了解你想讀的科系採計哪些科目。">
   <title>學測個人申請─採計科目查詢【108學年】</title>
+  <link rel="canonical" href="https://apply.nctu.me"/>
   <!-- bootstrap,jquery and popper.js -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
