--- a/apply.html
+++ b/apply.html
@@ -1,30 +1,21 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
 <head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-52378111-4"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'UA-52378111-4');
-  </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="面對學測五選四的來臨，還在苦惱要將心力投注在哪個科系上嗎？使用這個簡單的小工具，能讓你清楚了解你想讀的科系採計哪些科目。">
   <title>學測個人申請─採計科目查詢【108學年】</title>
-  <link rel="canonical" href="https://apply.nctu.me"/>
+  <link rel="canonical" href="https://apply.nctu.me/apply"/>
   <!-- bootstrap,jquery and popper.js -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
   <!-- external css -->
-  <link rel="stylesheet" href="style.css?v=4">
+  <link rel="stylesheet" href="apply.css">
   <!-- external js -->
-  <script src="common.js?v=2"></script>
+  <script src="apply.js"></script>
 </head>
 <body>
   <div class="content">
@@ -48,7 +39,6 @@
         </div>
         <div class="input-group-append">
           <button class="btn btn-primary" onclick="update()">
-            <span class="spinner-border spinner-border-sm loading" role="status" aria-hidden="true"></span>
             搜尋
           </button>
         </div>
@@ -124,16 +114,10 @@
 
         </tbody>
       </table>
-      <!-- loading spinner -->
-      <div class="text-center loading">
-        <div class="spinner-border text-secondary" role="status">
-          <span class="sr-only">載入中...</span>
-        </div>
-      </div>
     </div>
   </div>
   <div class="footer">
-    資料版本: <a href="https://github.com/jacky030607/apply-tool/blob/master/data/data.json">20190126</a> |
+    資料版本: <a href="https://github.com/jacky030607/apply-tool/blob/master/data/apply/data.json">20190126</a> |
     <a href="https://github.com/jacky030607/apply-tool">GitHub</a>
   </div>
 </body>
