--- a/advanced.html
+++ b/advanced.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="面對學測五選四的來臨，還在苦惱要將心力投注在哪個科系上嗎？使用這個簡單的小工具，能讓你清楚了解你想讀的科系採計哪些科目。">
+  <meta name="description" content="還在苦惱要怎麼準備指考嗎？使用這個簡單的小工具，能讓你清楚了解你想讀的科系採計哪些科目。">
   <title>指考考試分發─採計科目查詢【108學年】</title>
   <link rel="canonical" href="https://apply.nctu.me/advanced"/>
   <!-- bootstrap, jquery, popper.js and floatThead -->
