add navbar and index.html

--- a/advanced.html
+++ b/advanced.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="還在苦惱要怎麼準備指考嗎？使用這個簡單的小工具，能讓你清楚了解你想讀的科系採計哪些科目。">
   <title>指考考試分發─採計科目查詢【108學年】</title>
-  <link rel="canonical" href="https://apply.nctu.me/advanced"/>
+  <link rel="canonical" href="https://apply.nctu.me/advanced.html"/>
   <!-- bootstrap, jquery, popper.js and floatThead -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -18,6 +18,13 @@
   <script src="advanced.js"></script>
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e9ecef;">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link" href="/">首頁/常見問答</a>
+      <a class="nav-item nav-link" href="apply.html">學測/個人申請</a>
+      <a class="nav-item nav-link active" href="advanced.html">指考/考試分發</a>
+    </div>
+  </nav>
   <div class="content">
     <!-- title bar -->
     <div class="jumbotron jumbotron-fluid">
