--- a/apply.html
+++ b/apply.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="面對學測五選四的來臨，還在苦惱要將心力投注在哪些科系上嗎？使用這個簡單的小工具，能讓你清楚了解你想讀的科系採計哪些科目。">
   <title>學測個人申請─採計科目查詢【108學年】</title>
-  <link rel="canonical" href="https://apply.nctu.me/apply"/>
+  <link rel="canonical" href="https://apply.nctu.me/apply.html"/>
   <!-- bootstrap, jquery, popper.js and floatThead -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -19,6 +19,13 @@
   <script src="apply.js"></script>
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg navbar-light"  style="background-color: #e9ecef;">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link" href="/">首頁/常見問答</a>
+      <a class="nav-item nav-link active" href="apply.html">學測/個人申請</a>
+      <a class="nav-item nav-link" href="advanced.html">指考/考試分發</a>
+    </div>
+  </nav>
   <div class="content">
     <!-- title bar -->
     <div class="jumbotron jumbotron-fluid">
