change title of index.html

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="還在苦惱要怎麼準備指考嗎？使用這個簡單的小工具，能讓你清楚了解你想讀的科系採計哪些科目。">
-  <title>指考考試分發─採計科目查詢【108學年】</title>
+  <meta name="description" content="還在苦惱要怎麼準備學測或指考嗎？使用這個簡單的小工具，能讓你清楚了解你想讀的科系採計哪些科目。">
+  <title>學測/指考採計科目查詢</title>
   <link rel="canonical" href="https://apply.nctu.me"/>
   <!-- bootstrap, jquery, popper.js and floatThead -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
