disable collapse on small device; reduce navbar text length

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </script>
 
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="還在苦惱要怎麼準備學測或指考嗎？使用這個簡單的小工具，能讓你清楚了解你想讀的科系採計哪些科目。">
   <title>學測/指考採計科目查詢</title>
@@ -23,11 +24,11 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e9ecef;">
+  <nav class="navbar navbar-expand navbar-light" style="background-color: #e9ecef;">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="/">首頁/常見問答</a>
-      <a class="nav-item nav-link" href="apply.html">學測/個人申請</a>
-      <a class="nav-item nav-link" href="advanced.html">指考/考試分發</a>
+      <a class="nav-item nav-link active" href="/">首頁</a>
+      <a class="nav-item nav-link" href="apply.html">個人申請</a>
+      <a class="nav-item nav-link" href="advanced.html">考試分發</a>
     </div>
   </nav>
 </body>
