--- a/apply.html
+++ b/apply.html
@@ -29,11 +29,11 @@
   <script src="apply.js"></script>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light"  style="background-color: #e9ecef;">
+  <nav class="navbar navbar-expand navbar-light"  style="background-color: #e9ecef;">
     <div class="navbar-nav">
-      <a class="nav-item nav-link" href="/">首頁/常見問答</a>
-      <a class="nav-item nav-link active" href="apply.html">學測/個人申請</a>
-      <a class="nav-item nav-link" href="advanced.html">指考/考試分發</a>
+      <a class="nav-item nav-link" href="/">首頁</a>
+      <a class="nav-item nav-link active" href="apply.html">個人申請</a>
+      <a class="nav-item nav-link" href="advanced.html">考試分發</a>
     </div>
   </nav>
   <div class="content">
