--- a/advanced.html
+++ b/advanced.html
@@ -23,6 +23,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/floatthead/2.1.3/jquery.floatThead.min.js"></script>
   <!-- external css -->
+  <link rel="stylesheet" href="common.css">
   <link rel="stylesheet" href="advanced.css">
   <!-- external js -->
   <script src="advanced.js"></script>
@@ -38,13 +39,13 @@
   <div class="content">
     <!-- title bar -->
     <div class="jumbotron jumbotron-fluid">
-      <div class="container">
+      <div class="ml-5 mr-5">
         <h1>指考考試分發─採計科目查詢<span class="badge badge-secondary">108學年</span></h1>
         <h2>來看看你想讀的科系採計哪些科目吧！</h2>
       </div>
     </div>
+    <div class="ml-5 mr-5">
     <!-- search form -->
-    <div class="container">
       <div class="form-group input-group mb-3">
         <input type="text" class="form-control" id="qd" placeholder="科系名稱" value="" oninput="update();" maxlength="30">
         <div class="input-group-append">
