--- a/apply.html
+++ b/apply.html
@@ -24,6 +24,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/floatthead/2.1.3/jquery.floatThead.min.js"></script>
   <!-- external css -->
+  <link rel="stylesheet" href="common.css">
   <link rel="stylesheet" href="apply.css">
   <!-- external js -->
   <script src="apply.js"></script>
