remove unnecessary margin

--- a/advanced.html
+++ b/advanced.html
@@ -62,9 +62,9 @@
         </div>
       </div>
       <!-- advanced options -->
-      <div id="advanced_options" class="collapse float-sm-right form-inline mb-3">
-        <div class="form-group ml-2 mb-0">
-          <span class="ml-2" id="mode-title">搜尋模式：</span>
+      <div id="advanced_options" class="collapse form-inline mb-3">
+        <div class="form-group">
+          <span id="mode-title">搜尋模式：</span>
           <div class="custom-control custom-radio custom-control-inline">
             <input type="radio" id="mode-indexof" name="mode" class="custom-control-input" value="1" onchange="update()" checked="checked">
             <label class="custom-control-label" for="mode-indexof">一般</label>
