add title and footer in index.html

--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
   <meta name="description" content="還在苦惱要怎麼準備學測或指考嗎？使用這個簡單的小工具，能讓你清楚了解你想讀的科系採計哪些科目。">
   <title>學測/指考採計科目查詢</title>
   <link rel="canonical" href="https://apply.nctu.me"/>
-  <!-- bootstrap, jquery, popper.js and floatThead -->
+  <!-- bootstrap, jquery and popper.js-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
+  <!-- external css -->
+  <link rel="stylesheet" href="common.css">
 </head>
 <body>
   <nav class="navbar navbar-expand navbar-light" style="background-color: #e9ecef;">
@@ -31,5 +33,16 @@
       <a class="nav-item nav-link" href="advanced.html">考試分發</a>
     </div>
   </nav>
+  <div class="content">
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <h1>學測/指考採計科目查詢</h1>
+        <h2>點擊上方的「個人申請」或者是「考試分發」，就可以開始查詢囉！</h2>
+      </div>
+    </div>
+  </div>
+  <div class="footer">
+    <a href="https://github.com/jacky030607/apply-tool">GitHub</a>
+  </div>
 </body>
 </html>
