add float-right class on advanced option in advanced.html

--- a/advanced.html
+++ b/advanced.html
@@ -62,7 +62,7 @@
         </div>
       </div>
       <!-- advanced options -->
-      <div id="advanced_options" class="collapse form-inline mb-3">
+      <div id="advanced_options" class="collapse form-inline float-right mb-3">
         <div class="form-group">
           <span id="mode-title">搜尋模式：</span>
           <div class="custom-control custom-radio custom-control-inline">
