--- a/apply.html
+++ b/apply.html
@@ -13,7 +13,7 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta http-equiv="X-UA-Compatible" content="IE=10; IE=9; IE=8; IE=7; IE=EDGE" />
   <meta name="description" content="面對學測五選四的來臨，還在苦惱要將心力投注在哪些科系上嗎？使用這個簡單的小工具，能讓你清楚了解你想讀的科系採計哪些科目。">
   <title>學測個人申請─採計科目查詢【108學年】</title>
   <link rel="canonical" href="https://apply.nctu.me/apply.html"/>
