fix table layout

--- a/advanced.html
+++ b/advanced.html
@@ -79,19 +79,19 @@
       <table class="table table-bordered" id="table_result">
         <thead class="thead-light">
           <tr>
-            <th width="20%" class="align-middle" rowspan="2">學校</th>
-            <th width="30%" class="align-middle" rowspan="2">科系</th>
-            <th width="10%" class="subject subject-title align-middle">國文</th>
-            <th width="10%" class="subject subject-title align-middle">英文</th>
-            <th width="10%" class="subject subject-title align-middle">數甲</th>
-            <th width="10%" class="subject subject-title align-middle">物理</th>
-            <th width="10%" class="subject subject-title align-middle">化學</th>
-            <th width="10%" class="subject subject-title align-middle">生物</th>
-            <th width="10%" class="subject subject-title align-middle">數乙</th>
-            <th width="10%" class="subject subject-title align-middle">歷史</th>
-            <th width="10%" class="subject subject-title align-middle">地理</th>
-            <th width="10%" class="subject subject-title align-middle">公民</th>
-            <th width="10%" class="subject subject-title align-middle">術科</th>
+            <th style="width:15%" class="align-middle" rowspan="2">學校</th>
+            <th style="width:20%" class="align-middle" rowspan="2">科系</th>
+            <th class="subject subject-title align-middle">國文</th>
+            <th class="subject subject-title align-middle">英文</th>
+            <th class="subject subject-title align-middle">數甲</th>
+            <th class="subject subject-title align-middle">物理</th>
+            <th class="subject subject-title align-middle">化學</th>
+            <th class="subject subject-title align-middle">生物</th>
+            <th class="subject subject-title align-middle">數乙</th>
+            <th class="subject subject-title align-middle">歷史</th>
+            <th class="subject subject-title align-middle">地理</th>
+            <th class="subject subject-title align-middle">公民</th>
+            <th class="subject subject-title align-middle">術科</th>
           </tr>
           <tr>
             <th class="subject subject-title align-middle" colspan="2">學測國文</th>
@@ -99,7 +99,7 @@
             <th class="subject subject-title align-middle" colspan="2">學測數學</th>
             <th class="subject subject-title align-middle" colspan="2">學測社會</th>
             <th class="subject subject-title align-middle" colspan="2">學測自然</th>
-            <th class="subject subject-title align-middle" colspan="2">英聽</th>
+            <th class="subject subject-title align-middle">英聽</th>
           </tr>
         </thead>
         <tbody id="result_content">
