--- a/advanced.html
+++ b/advanced.html
@@ -15,6 +15,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=10; IE=9; IE=8; IE=7; IE=EDGE" />
   <meta name="description" content="還在苦惱要怎麼準備指考嗎？使用這個簡單的小工具，能讓你清楚了解你想讀的科系採計哪些科目。">
+  <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico?v=bOME3jLmbj' />
   <title>指考考試分發─採計科目查詢【108學年】</title>
   <link rel="canonical" href="https://apply.nctu.me/advanced.html"/>
   <!-- bootstrap, jquery, popper.js and floatThead -->
